# camptask

./: AGENTS.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
resources/: manifest.json
resources/prompts/: LEADER.md  LEADER.ref.md  REF_MIGRATION.md  UNIFIED.md  WORKER.md  WORKER.ref.md
resources/schemas/: camp_event.v0.schema.json  camp_metadata.v0.schema.json
resources/specs/: camp_runtime_v0.md  check_lite_v0.json
resources/templates/: camp_handoff.md  work_report.md
scripts/: install.sh  setup-githooks.sh  uninstall.sh
src/: app.rs  config.rs  lib.rs  resources.rs  self_update.rs
tests/: command_placeholders.rs  hello_world.rs  resources_flow.rs
